[gd_scene load_steps=3 format=2]

[ext_resource path="res://fonts/arial_48.tres" type="DynamicFont" id=1]
[ext_resource path="res://scripts/main.gd" type="Script" id=2]

[node name="Main" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GridContainer" type="GridContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -275.5
margin_top = -326.0
margin_right = 275.5
margin_bottom = 326.0

[node name="Button4" type="Button" parent="GridContainer"]
margin_right = 551.0
margin_bottom = 89.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = ExtResource( 1 )

[node name="Label" type="Label" parent="GridContainer/Button4"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = ExtResource( 1 )
text = "Random Noise
Demo"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button3" type="Button" parent="GridContainer"]
margin_top = 93.0
margin_right = 551.0
margin_bottom = 182.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = ExtResource( 1 )

[node name="Label" type="Label" parent="GridContainer/Button3"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = ExtResource( 1 )
text = "Open Simplex
Noise Demo"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button2" type="Button" parent="GridContainer"]
margin_top = 186.0
margin_right = 551.0
margin_bottom = 275.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = ExtResource( 1 )

[node name="Label" type="Label" parent="GridContainer/Button2"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = ExtResource( 1 )
text = "Wave Function
Collapse Demo"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="GridContainer"]
margin_top = 279.0
margin_right = 551.0
margin_bottom = 368.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = ExtResource( 1 )
text = "Grid Paint"

[node name="Button5" type="Button" parent="GridContainer"]
margin_top = 372.0
margin_right = 551.0
margin_bottom = 461.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = ExtResource( 1 )
text = "Load Texture"

[node name="Button6" type="Button" parent="GridContainer"]
margin_top = 465.0
margin_right = 551.0
margin_bottom = 554.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = ExtResource( 1 )
text = "XML Texture Atlas"

[node name="Button7" type="Button" parent="GridContainer"]
margin_top = 558.0
margin_right = 551.0
margin_bottom = 647.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = ExtResource( 1 )
text = "Tileset"
